feat(loader): 添加 1.20.1 Forge 加载器支持并标记为 LTS
- 新增 Stonecutter 节点 1.20.1-forge（moddevgradle legacyforge 插件，Forge 47.4.0，Java 17）
- 新增 build.forge.gradle.kts、mods.toml 模板、ForgePlatform、TrChatServerEventsForge 与 ForgeConfigSpec 配置分支
- 共享源码新增 //? if >=1.20.5 版本分支：DataComponents/ItemContainerContents 改 NBT 兜底、latency 字段、getLanguage、getAverageTickTime、注册表 get() 直查、Thread.ofVirtual/ofPlatform 与 List.getFirst 的 Java 17 兜底
- ConfigValue 统一改用 get() 以兼容 ForgeConfigSpec；Forge LivingDamageEvent 使用 getAmount()
- CI（build.yml/release.yml）加入 1.20.1-forge 节点、JDK 17 与产物上传；release.ps1 校验数量 8→9
- README/README_EN 增加 Forge 1.20.1 LTS 说明与加载器差异表
- 全部 9 个节点 build+test 通过（含 46 项 1.20.1-forge 测试）